# bigquery-sql-agent

./: .cloud-config.json  .cloud-credentials.sanchit809@gmail.com.enc  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  pyproject.toml
.claude/hooks/: cloud-auth.sh
app/: bigquery.py  config.py  graph.py  main.py  prompts.py  state.py
app/nodes/: answer.py  draft.py  execute.py  schema.py  validate.py
eval/: dataset.jsonl  run_eval.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: Widget.tsx  main.tsx
