[project]
name = "bigquery-sql-agent"
version = "0.1.0"
description = "Natural-language-to-SQL agent over BigQuery (NYC Citibike)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "google-genai>=1.0.0",
    "langchain-core>=0.3.0",
    "google-cloud-bigquery>=3.25.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlglot>=25.0.0",
    "python-dotenv>=1.0.0",
    "langsmith>=0.1.0",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
